# Parser-for-Mathematical-Expressions

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  filepaths.cmake  utils.cmake
include/pfme/: AST.hpp  Fraction.hpp  Lexer.hpp  Parser.hpp  Token.hpp  Visitor.hpp
src/cpp/: AST.cpp  Fraction.cpp  Lexer.cpp  Parser.cpp  Token.cpp  Visitor.cpp
src/main/: main.cpp
test/: CMakeLists.txt
test/src/: AST.cpp  Fraction.cpp  Lexer.cpp  Parser.cpp  Token.cpp  Visitor.cpp
